@@ -19,6 +19,9 @@
 
 # Ruby 2.6 OpenWhisk Runtime Container
 
+## Next Release
+  - Golang Action loop updatetd to golang 1.18
+
 ## 1.17.0
   - Build actionloop from 1.16@1.18.0 (#63)
   - Resolve akka versions explicitly. (#62, #61)
